[package]
name = "orionpay-stellar"
version = "0.1.0"
edition = "2024"

[dependencies]
soroban-sdk = { version = "26.1.0", features = ["alloc", "testutils"] }
orionpay-contract = { path = "../../" }

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
testutils = ["soroban-sdk/testutils"]
default = []